syntax = "proto3";
package kurtosis_portal_daemon;

// NOTE: It sucks that we have this Go-specific logic inside this file (which should be language-agnostic). However, the Protobuf team have
// taken a hard stance on this being the way it should be done, so we have to do it this way.
option go_package = "github.com/kurtosis-tech/kurtosis-portal/api/golang/generated";

import "google/api/annotations.proto";
import "portal_endpoint.proto";
import "portal_ping.proto";

service KurtosisPortalServer {
  // To check availability
  rpc Ping(PortalPing) returns (PortalPong) {
    // this annotation is needed for Envoy GRPC Transcode to route requests to the right GRPC method
    option (google.api.http) = {
      post: "/server/grpc/ping"
    };
  };

  rpc GetRemoteEndpoints(GetRemoteEndpointsArgs) returns (GetRemoteEndpointsResponse) {
    // this annotation is needed for Envoy GRPC Transcode to route requests to the right GRPC method
    option (google.api.http) = {
      post: "/server/grpc/get-remote-endpoints"
    };
  };
}

message GetRemoteEndpointsArgs { }

message RemoteEndpoint {
  RemoteEndpointType remote_endpoint_type = 1;
  string remote_host = 2;
}

message GetRemoteEndpointsResponse {
  repeated RemoteEndpoint remote_endpoints = 1;
}
